edite un error en foto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ rel="stylesheet">
 <body>
     <div id="header">
         <div class="container-fluid mt-3">
-            <img src="./img_cv.jpg" class="float-start" alt="Paris" width="200" height="200" id="foto">
+            <img src="./img_cv.jpg" class="float-start" alt="fotocv" width="200" height="200" id="foto">
             <h2 class="nombre">Lorem Ipsum</h2>
             <h3>diseñadora textil</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p> 
