--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ rel="stylesheet">
 <body>
     <div id="header">
         <div class="container-fluid mt-3">
-            <img src="./img_cv.jpg" class="float-start" alt="Paris" width="200" height="200" id="foto">
+            <img src="./img_cv.jpg" class="float-start" alt="fotocv" width="200" height="200" id="foto">
             <h2 class="nombre">Lorem Ipsum</h2>
             <h3>diseñadora textil</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p> 
@@ -95,12 +95,27 @@ rel="stylesheet">
           </div>
         </div>
           <div class="col-12 col-md-6">
-           <a href="masdemi.jpg" class="button" id="mybutton">Más de mi</a>
+            <button type="button"  data-bs-toggle="modal" data-bs-target="#myModal" id="mybutton">
+              Mas de mi
+            </button>
           </div>
-        
-        </div>
-    
-      </footer>
+          <div class="modal" id="myModal">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+
+                <div class="modal-header">
+                  <h4 class="modal-title">Placeres</h4>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="./masdemi.jpg" alt="ilustración">
+
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </footer>
 
  
    
