cambios en mas de mi

--- a/index.html
+++ b/index.html
@@ -95,7 +95,25 @@ rel="stylesheet">
           </div>
         </div>
           <div class="col-12 col-md-6">
-           <a href="masdemi.jpg" class="button" id="mybutton">Más de mi</a>
+            <button type="button"  data-bs-toggle="modal" data-bs-target="#myModal" id="mybutton">
+              Mas de mi
+            </button>
+          </div>
+          <!--contenido modal-->
+          <div class="modal" id="myModal">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+
+                <div class="modal-header">
+                  <h4 class="modal-title">Placeres</h4>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="./masdemi.jpg" alt="ilustración">
+
+                </div>
+              </div>
+            </div>
           </div>
         
         </div>
