--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ rel="stylesheet">
             <button type="button"  data-bs-toggle="modal" data-bs-target="#myModal" id="mybutton">
               Mas de mi
             </button>
-          </div>
+          </div> <!--contenido modal-->
           <div class="modal" id="myModal">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
@@ -107,20 +107,17 @@ rel="stylesheet">
                   <h4 class="modal-title">Placeres</h4>
                   <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body">
-                  <img src="./masdemi.jpg" alt="ilustración">
-
+                <div class="modal-body" >
+                  <div class="text-center">
+                    <img src="./masdemi.jpg" alt="ilustración">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
       </div>
     </footer>
-
- 
-   
-
-    </body>
+</body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
