cambio en modal-body

--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@ rel="stylesheet">
                   <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="./masdemi.jpg" alt="ilustración">
-
+                   <div class="text-center"> 
+                     <img src="./masdemi.jpg" alt="ilustración">
+                   </div>
                 </div>
               </div>
             </div>
